# spacegamebackend

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: design.md
spacegamebackend/: exceptions.py  utils.py
spacegamebackend/application/: __init__.py
spacegamebackend/application/models/: evaluator.py  templates.py
spacegamebackend/application/models/space/: seeder.py
spacegamebackend/domain/: constants.py
spacegamebackend/domain/models/: eval_result.py  user_data_hub.py
spacegamebackend/infra/: models.py  sqlite_user_repository.py  sqlite_user_research_repository.py  sqlite_user_resource_repository.py  sqlite_user_structures_repository.py
spacegamebackend/infra/models/: blob_int.py
spacegamebackend/infra/scripts/: add_resources_to_users.py  init_tables.py  init_users.py
spacegamebackend/repositories/: user_data_hub.py  user_repository.py  user_research_repository.py  user_resource_repository.py  user_structure_repository.py
spacegamebackend/schemas/: structure_slot_type.py
spacegamebackend/schemas/component_system/: component_template.py
spacegamebackend/schemas/research/: research_type.py
spacegamebackend/schemas/resource/: types.py
spacegamebackend/schemas/space/: component.py  component_template.py  entity.py  entity_template.py  seeder.py
spacegamebackend/schemas/structures/: structure.py  structure_type.py
spacegamebackend/security/: encrypt.py
spacegamebackend/service/: __init__.py  service.py
spacegamebackend/service/dependencies/: handler_dependencies.py  redis_dependencies.py  research_dependencies.py  structure_dependencies.py  user_dependencies.py
spacegamebackend/service/handlers/: build_structure_handler.py  entity_finder.py  get_login_handler.py  get_register_handler.py  get_research_forest.py  get_researches_handle.py  get_structures_handler.py  get_system_handler.py  get_user_resource_handler.py  time_warp_handler.py  upgrade_research_handler.py  upgrade_structure_handler.py
spacegamebackend/service/modules/: user_resource_updater.py
spacegamebackend/service/routers/: main_router.py  research_router.py  structures_router.py  system_router.py  user_resources_router.py  user_router.py
spacegamebackend/tests/unit/: test_component_store.py
spacegamebackend/utils/: component_store.py  forest.py  generate_gamma_value.py  int_to_roman.py  production_component.py  requirement_component.py  research_requirement_component.py  resource_capacity_component.py  resource_production_component.py  resource_requirement_component.py  sortable_component.py  storage_component.py  structure_requirement_component.py
(+84 files in other folders)
